@@ -1,0 +1,12 @@
+package andrew.powersuits.common;
+
+import net.machinemuse.powersuits.network.MusePacketHandler;
+import net.machinemuse.powersuits.tick.PlayerTickHandler;
+import cpw.mods.fml.common.registry.TickRegistry;
+import cpw.mods.fml.relauncher.Side;
+
+public class CommonProxy {
+	public void registerHandlers() {
+		
+	}
+}
