@@ -1,3 +1,6 @@
+MPSA - 5
++ Added experimental HUD elements for Auto-Feeder and Torch Placer
+
 MPSA - 4
 + Added torch placing module
 ~ Cleaned up some code
